<resources>
    <string name="app_name">퍼센트 고객용</string>
    <string name="skip">건너뛰기</string>
    <string name="end">완료</string>
    <string name="start_intro">시작하기</string>
    <string name="how_to">이용안내</string>
    <string name="faq">자주 묻는 질문(FAQ)</string>
    <string name="contact">고객센터(연락처)</string>
    <string name="loan_postscript">이용 후기</string>
    <string name="ongoing_loan">진행 중 견적</string>
    <string name="finish_loan">종료된 견적</string>
    <string name="my_loan">내 견적 요청함</string>
    <string name="main_ment_1">최저금리를 찾는 확실한 방법\n주택담보대출은 퍼센트!</string>
    <string name="main_ment_2">주택담보대출은 퍼센트!</string>
    <string name="main_button_ment">새 견적요청 하기</string>
    <string name="current_quotation">견적 수</string>
    <string name="request_quotation">견적 요청</string>
    <string name="my_quotation">내 견적함</string>
    <string name="quotation_result">견적 요청 결과</string>
    <string name="quotation_result_count">견적 수</string>
    <string name="quotation_list">견적 리스트</string>
    <string name="selected_quotation">선택된 견적</string>
    <string name="average_mola">평균 금리</string>
    <string name="quotation_detail">견적 요청 상세</string>
    <string name="show_detail">상세보기 +</string>
    <string name="operation_guide">이용 안내</string>
    <string name="quotation_detail_write_comment">대출 후기 작성하기</string>
    <string name="postscript_detail">대출후기</string>
    <string name="loan_interest_rate">대출 금리</string>
    <string name="interest_type">금리 방식</string>
    <string name="go_counselor">상담사 보기</string>
    <string name="counselor_detail">상담사 상세</string>
    <string name="monthly_repay_money">월 평균 상환액</string>
    <string name="repay_type">상환 방식</string>
    <string name="back">뒤로 가기</string>
    <string name="request_counsel">상담 신청하기</string>
    <string name="write_comment">후기 작성하기</string>
    <string name="write_comment_please">후기를 작성해주세요.</string>
    <string name="hello_money_service_contact">퍼센트 서비스 문의</string>
    <string name="hello_money_kakao_contact">퍼센트 카카오 문의</string>
    <string name="kakao_talk">카카오톡</string>
    <string name="kakao_talk_id">percent</string>
    <string name="telephone">전화번호</string>
    <string name="hello_money_telephone">070&#8211;8237&#8211;8282</string>
    <string name="email">이메일</string>
    <string name="hello_money_email">help@percent.co.kr</string>
    <string name="operation_time">운영시간</string>
    <string name="hello_money_operation_time">평일 10:00 ~ 19:00</string>
    <string name="check_id_url">http://52.78.186.37:3000/clients/customers/%s</string>
    <string name="registered_id_url">http://52.78.186.37:3000/clients/customers</string>
    <string name="my_request_quotation_url">http://52.78.186.37:3000/clients/requests?customerId=%1$s&amp;&amp;exceptCompletedRequest=%2$s&amp;limitCount=3</string>
    <string name="my_request_quotation_no_limit_url">http://52.78.186.37:3000/clients/requests?customerId=%1$s&amp;&amp;exceptCompletedRequest=%2$s</string>
    <string name="request_quotation_url">http://52.78.186.37:3000/clients/requests</string>
    <string name="my_request_quotation_ongoing_done_url">http://52.78.186.37:3000/clients/requests/calculate?customerId=%s</string>
    <string name="get_post_script_url">http://52.78.186.37:3000/clients/reviews?page=%s&amp;count=30</string>
    <string name="my_quotation_list_url">http://52.78.186.37:3000/clients/requests/%s</string>
    <string name="quotation_detail_counselor_feedback_url">http://52.78.186.37:3000/clients/estimates?requestId=%s</string>
    <string name="my_quotation_detail_url">http://52.78.186.37:3000/clients/requests/%s</string>
    <string name="my_quotation_feedback_detail_url">http://52.78.186.37:3000/clients/estimates/%s</string>
    <string name="request_counsel_url">http://52.78.186.37:3000/clients/requests/%s</string>
    <string name="write_post_script_url">http://52.78.186.37:3000/clients/reviews</string>
    <string name="detail_counselor_url">http://52.78.186.37:3000/clients/agents/%s</string>
    <string name="detail_counselor_post_script_list_url">http://52.78.186.37:3000/clients/agents/%s/reviews</string>
    <string name="request_region1_url">http://52.78.186.37:3000/clients/apts/regions1/</string>
    <string name="request_region2_url">http://52.78.186.37:3000/clients/apts/regions1/%s/regions2</string>
    <string name="request_region3_url">http://52.78.186.37:3000/clients/apts/regions1/%1$s/regions2/%2$s/regions3</string>
    <string name="request_apt_url">http://52.78.186.37:3000/clients/apts/regions1/%1$s/regions2/%2$s/regions3/%3$s/aptNames</string>
    <string name="request_apt_size_url">http://52.78.186.37:3000/clients/apts/regions1/%1$s/regions2/%2$s/regions3/%3$s/aptNames/%4$s</string>
    <string name="faq_url">http://52.78.186.37:3000/commons/faqs</string>
    <string name="post_script_interest_url">http://52.78.186.37:3000/clients/reviews/collected/%s</string>
    <string name="post_script_detail_url">http://52.78.186.37:3000/clients/reviews/%s</string>
    <string name="selected_feedback_detail_url">http://52.78.186.37:3000/clients/reviews/agents/%s</string>
    <string name="url_success">SUCCESS</string>
    <string name="url_no_data">NO_DATA</string>
    <string name="url_message">msg</string>
    <string name="url_data">data</string>
    <string name="send">전송</string>
    <string name="write_price">금액을 입력해주세요.</string>
    <string name="choose_apt">아파트 선택하러 가기</string>
    <string name="loan_type_1">주택담보대출</string>
    <string name="loan_type_2">전세자금대출</string>
    <string name="select_region_1">시/도 선택하기</string>
    <string name="confirm_all_information">네. 모든 정보가 맞습니다.</string>
    <string name="step_content2">견적을 선택해주세요.</string>
    <string name="step_content3">상담이 진행 중입니다.</string>
    <string name="step_content4">심사가 진행 중입니다.</string>
    <string name="step_content5">승인이 완료되었습니다.</string>
    <string name="step_content6">대출이 실행되었습니다.</string>
    <string name="days">견적은 3일간 유효합니다.</string>
    <string name="ongoing_quotation_check">http://52.78.186.37:3000/clients/requests/permission?customerId=%s</string>


    <string name="fix">수정</string>


    <string name="test">testing text for HelloMoney.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
