<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:background="@color/basement"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:textColor="@color/pointTypo"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/basement"
        android:orientation="horizontal"
        android:layout_weight="100"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="5"
                android:layout_centerInParent="true"
                android:id="@+id/textView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongoing_loan"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="5"
                android:layout_centerInParent="true"
                android:id="@+id/doneLoan" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_loan"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>